--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
-    "@types/socket.io-client": "^1.4.32",
     "angular-chat": "1.0.9",
     "core-js": "^2.4.1",
+    "injectable": "0.0.1",
+    "ng-socket-io": "^0.2.0",
+    "ng2-socket-io": "^0.1.7",
+    "ngx-auto-scroll": "^1.0.15",
     "ngx-cookie-service": "^1.0.9",
     "rltm": "1.3.1",
     "rxjs": "^5.4.2",
